platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_108.platter
start() {
  piece of badval = 1 value;
}